CODE-feat-39b14.2: DBAL

--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -1,7 +1,7 @@
 <h1>{L_adm_tools}</h1>
 <table>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}">phpinfo()</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_MYSQL}">{L_adm_tool_mysql_page_header}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_SQL}">{L_adm_tool_sql_page_header}</a></th></tr>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}">{L_adm_tools_reloadConfig}</a></th></tr>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a></th></tr>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a></th></tr>
