--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -64,6 +64,7 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
   planet_image: '{galaxyrow.PLANET_IMAGE}',
   planet_fleet_id: '{galaxyrow.PLANET_FLEET_ID}',
   planet_diameter: '{galaxyrow.PLANET_DIAMETER}',
+  planet_destroyed: '{galaxyrow.PLANET_DESTROYED}',
 
   moon_name: '{galaxyrow.MOON_NAME_JS}',
   moon_diameter: '{galaxyrow.MOON_DIAMETER}',
