BLITZ-misc-39b15.11: Added price on reg page. Added reg mode on blitz button

--- a/design/templates/OpenGame/blitz_register.tpl.html
+++ b/design/templates/OpenGame/blitz_register.tpl.html
@@ -56,7 +56,8 @@
     </form>
   <!-- ELSE -->
     <form action="" method="post">
-      <input type="submit" name="register_me" value="{L_sys_blitz_registration_player_register}" />
+      <input type="submit" name="register_me" value="{L_sys_blitz_registration_player_register}" /><br />
+      {L_sys_blitz_registration_price} {C_game_blitz_register_price} {L_sys_metamatter}
     </form>
   <!-- ENDIF -->
 <!-- ELSE -->
