BLITZ-misc-39b15.13: Added reg users count to Blitz button

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -11,7 +11,7 @@
       <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');" style="margin: 5px 0;">
         {L_sys_blitz_global_button}:
         <span class="<!-- IF BLITZ_REGISTER_OPEN -->positive<!-- ELSEIF BLITZ_REGISTER_CLOSED -->negative<!-- ELSEIF BLITZ_REGISTER_SHOW_LOGIN -->zero<!-- ELSEIF BLITZ_REGISTER_DISCLOSURE_NAMES --><!-- ENDIF -->">
-          {GAME_BLITZ_REGISTER_TEXT}
+          {GAME_BLITZ_REGISTER_TEXT} ({C_game_blitz_register_users})
         </span>
       </button>
     </td>
