AUTH-misc-39b15.23: Creating user now is separate function

--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -131,6 +131,11 @@
             <th width="179">{L_sys_email}</th>
             <th width="161"><input name="email" type="text" value="{EMAIL}" size="20" maxlength="64" /></th>
           </tr>
+          <tr>
+            <th colspan="2">
+              {L_login_register_email_hint}
+            </th>
+          </tr>
 
           <tr>
             <th>{L_sys_password}</th>
