--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -210,7 +210,7 @@
             <th><input name="email" type="text" value="{EMAIL}" size="20" maxlength="64" /></th>
           </tr>
           <tr>
-            <th colspan=2><input name="confirm_code_send" type="submit" value="{L_log_lost_send_mail}" /></th>
+            <th colspan=2><input name="password_reset" type="submit" value="{L_log_lost_send_mail}" /></th>
           </tr>
           </tbody>
         </table>
@@ -223,11 +223,11 @@
           </tr>
           <tr>
             <th>{L_log_lost_code}</th>
-            <th><input name="confirm" type="text" size="{D_LOGIN_PASSWORD_RESET_CONFIRMATION_LENGTH}" maxlength="{D_LOGIN_PASSWORD_RESET_CONFIRMATION_LENGTH}" /></th>
+            <th><input name="password_reset_code" type="text" size="{D_LOGIN_PASSWORD_RESET_CONFIRMATION_LENGTH}" maxlength="{D_LOGIN_PASSWORD_RESET_CONFIRMATION_LENGTH}" /></th>
           </tr>
           <tr>
             <input name="lang" type="hidden" value="{LANG}" />
-            <th colspan=2><input name="confirm_code_submit" type="submit" value="{L_log_lost_reset_pass}" /></th>
+            <th colspan=2><input name="password_reset_confirm" type="submit" value="{L_log_lost_reset_pass}" /></th>
           </tr>
           </tbody>
         </table>
