MISC-fix-40a1.4: Fixed glued window can not be unglued in advanced chat

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -42,6 +42,8 @@
       var localTime = new Date();
 
       var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
+      var SN_ROOT_VIRTUAL = '{D_SN_ROOT_VIRTUAL}';
+      var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
     </script>
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
@@ -70,7 +72,6 @@
       }
 
       var dpath = '{dpath}';
-      var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
       var SN_GOOGLE = parseInt('{SN_GOOGLE}') ? 1 : 0;
     </script>
 
