--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -178,7 +178,7 @@
   <!-- INCLUDE planet_resources -->
 </table>
 <!-- ENDIF -->
-<div align="center" style="display: none;" id="navbar_refresh"><span class="link_action" onclick="document.location.reload(true);">{L_topnav_refresh_page}</span></div>
+<div align="center" style="display: none; margin: 10px 0;" id="navbar_refresh"><span class="link_action" onclick="document.location.reload(true);">{L_topnav_refresh_page}</span></div>
 <script type="text/javascript"><!--
   if(sn_inframe) $('#navbar_refresh').css('display', 'block');
 // --></script>
