INT-misc-40a1.11: On Planet added renaming and core change

--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -33,7 +33,7 @@
       <th>
         <button type="submit" id="transmute_button" name="transmute" value="transmute" disabled="disabled">
           {L_sys_change}<br />
-          {L_sys_for} <span id="transmutation_cost" class="positive">0</span> {L_sys_dark_matter_sh}
+          {L_sys_for} <span id="transmutation_cost" class="zero">0</span> {L_sys_dark_matter_sh}
         </button>
 
         <script type="text/javascript">
